--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
   <head>
     <title>boardgame.io Tutorial</title>
     <meta charset="utf-8" />
-    <style>
-      .cell {
-        border: 1px solid #555;
-        width: 50px;
-        height: 50px;
-        line-height: 50px;
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div id="app"></div>
